# Livraria-django

./: .pdm-python  README.md  db.sqlite3  livraria_bkp.json  pyproject.toml  requirements.txt  token.txt
config/: settings.py  urls.py
livraria/: models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_autor_editora_livro.py  0002_livro_capa.py  0003_livro_autores.py  0004_alter_autor_options_alter_autor_email_and_more.py
livraria/models/: livro.py
livraria/serializers/: __init__.py  autor.py  categoria.py  editora.py  livro.py
livraria/views/: categoria.py  editora.py  livro.py
usuario/migrations/: 0001_initial.py
